--- a/Information Retrieval System/research/trials.ipynb
+++ b/Information Retrieval System/research/trials.ipynb
@@ -2,10 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'AIzaSyBH7GVIl64Cb6zpTPWl8EO1E-34oBpBfEM'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv()\n",
+    "GOOGLE_API_KEY = os.getenv(\"GOOGLE_API_KEY\")\n",
+    "GOOGLE_API_KEY"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +40,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.2"
   }
  },
